2008-11-19  Miklos Szeredi <miklos@szeredi.hu>

	* lowlevel lib: fix deadlock if fuse_reply_* is called from the
	interrupt handling function.  Reported by Tero Marttila

2008-10-16  Miklos Szeredi <miklos@szeredi.hu>

	* Allow commas in options to be escaped with a backslash

	* Add new function: fuse_opt_add_opt_escaped()

	* Add missing fuse_reply_bmap() to the version script

2008-10-14  Miklos Szeredi <miklos@szeredi.hu>

	* Pass current file flags to read and write operations

2008-07-24  Miklos Szeredi <miklos@szeredi.hu>

	* Clean up debug output in highlevel lib

2008-07-10  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.0-pre1

2008-06-27  Miklos Szeredi <miklos@szeredi.hu>

	* Fix handling of (no)suid and (no)dev options if filesystem is
	mounted from /etc/fstab or via mount(8).  Reported by Jan Ondrej.

	* Skip calling mount(8) if /etc/mtab doesn't exist or if it's on a
	read-only filesystem.  This works around issues with certain mount
	implementations.  Reported by Szabolcs Szakacsits.

2008-06-16  Miklos Szeredi <miklos@szeredi.hu>

	* Remove fuse kernel module sources.  Linux 2.6.27 will support
	NFS exporting.

2008-06-10  Miklos Szeredi <miklos@szeredi.hu>

	* Fix theoretical infinite loops in libfuse.  Reported by Szabolcs
	Szakacsits

	* Fix missing <sys/param.h> include for PATH_MAX.  Reported by
	Szabolcs Szakacsits

2008-05-23  Miklos Szeredi <miklos@szeredi.hu>

	* Fix mounting over symlink.  Reported by Szabolcs Szakacsits

2008-05-09  Miklos Szeredi <miklos@szeredi.hu>

	* Don't allow bigger than 4kB writes by default on 2.6.26 and
	later kernels, so that filesystems not expecting this are not
	broken on a kernel upgrade.  Provide a 'big_writes' mount option
	to enable this feature.  In future API revisions this may become
	the default.

2008-04-09  Miklos Szeredi <miklos@szeredi.hu>

	* Update warning message for missing newline at end of fuse.conf

	* Update debug message for successful operation to not include the
	string "error:"
