@@ -1,3 +1,8 @@
+2008-11-28  Miklos Szeredi <miklos@szeredi.hu>
+
+	* If open sets fi->nonseekable, libfuse will tell the kernel that
+	the file is not seekable.  Patch by Tejun Heo
+
 2008-11-19  Miklos Szeredi <miklos@szeredi.hu>
 
 	* lowlevel lib: fix deadlock if fuse_reply_* is called from the
